@@ -1,3 +1,9 @@
+2002-01-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* nedcwrapper.sh: strip all command line arguments except the last
+	one so that only the ned file name is left. Use this for running
+	grep and perl.
+
 2001-10-26 Andras Varga
 
 	* ebnf.y, jar_expr.c, jar_lib.c, jar_func.h, jar_lib.h: implemented
